package com.zaozhuang.newborn.ui.base;



public interface ILoadingView {
    void start();
    void stop();
}
